tests/data-clumps/test-cases/field-field/always-class/positive/java/source/ContactInfo.java
public class ContactInfo {
    public String email;
    public String phone;

    public ContactInfo(String email, String phone) {
        this.email = email;
        this.phone = phone;
    }
}
