tests/data-clumps/test-cases/field-field/always-class/negative/java/source/Insurance.java
public class Insurance {
    public String provider;
    public String policyNumber;

    public Insurance(String provider, String policyNumber) {
        this.provider = provider;
        this.policyNumber = policyNumber;
    }
}
